--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Paris (France) -- Fiction'
+- GITenberg
 title: "Le sergent Renaud\r\nAventures parisiennes"
 url: http://www.gutenberg.org/ebooks/17252
